# envoy-api-adapter

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  wsgi.py
.github/workflows/: pipeline.yml
api_adapter/: auth.py  constants.py  create.py  database.py  helpers.py  listing.py  profile.py  receive.py  render.py  render_json.py  send.py  server.py  stats.py  team.py  users.py
scripts/: run_checks.sh
tests/: conftest.py  test_auth.py  test_create.py  test_database.py  test_listing.py  test_render.py  test_send.py
tests/test_data/: example1.xml  sample_response.xml  test_invalid_invoice_input.json  test_invoice_input.json  test_valid_response.xml
