[tool.poetry]
name = "api_adapter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"
pymongo = "^4.0.2"
dnspython = "^2.2.1"
coloredlogs = "^15.0.1"
gunicorn = "^20.1.0"
Flask-Cors = "^3.0.10"
requests = "^2.27.1"
pytz = "^2022.1"
xmltodict = "^0.12.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
pytest = "^7.1.1"
black = "^22.1.0"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
